Added open-source code link

--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
           </div>
         </div>
       </div>
+
+      <div class="codeLink">
+        <a href="https://github.com/sarahliza/weather-app.git"
+          >Open-source code</a
+        >
+        by Sarah Lee
+      </div>
     </div>
 
     <script src="src/index.js"></script>
