--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
 
       <div class="codeLink">
-        <a href="https://github.com/sarahliza/weather-app.git"
+        <a href="https://github.com/sarahliza/weather-app.git" target="_blank"
           >Open-source code</a
         >
         by Sarah Lee
