--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   />
                   <span class="large-temp" id="temperature">-</span>
                   <span class="deg-far"
-                    ><a href="#" id="cels">°C</a> |
+                    ><a href="#" id="cels" class="active">°C</a> |
                     <a href="#" id="fahr">°F</a></span
                   >
                 </h2>
