Re-organised forecast rows & columns

--- a/index.html
+++ b/index.html
@@ -89,43 +89,54 @@
             </div>
 
             <div class="weather-forecast">
-              <div class="row mt-3 days">
-                <div class="col-2">Tues</div>
-                <div class="col-2">Weds</div>
-                <div class="col-2">Thurs</div>
-                <div class="col-2">Fri</div>
-                <div class="col-2">Sat</div>
-                <div class="col-2">Sun</div>
-              </div>
+              <div class="row mt-3">
+                <div class="col-2">
+                  <div class="day-forecast">
+                    <div class="day">Tues</div>
+                    <i class="fa-solid fa-cloud-showers-heavy small-icon"></i>
+                    <div class="hi-lo">Hi/Lo</div>
+                  </div>
+                </div>
 
-              <div class="row icon-line">
                 <div class="col-2">
-                  <i class="fa-solid fa-cloud-showers-heavy small-icon"></i>
+                  <div class="day-forecast">
+                    <div class="day">Weds</div>
+                    <i class="fa-solid fa-cloud small-icon"></i>
+                    <div class="hi-lo">Hi/Lo</div>
+                  </div>
                 </div>
-                <div class="col-2">
-                  <i class="fa-solid fa-cloud small-icon"></i>
-                </div>
-                <div class="col-2">
-                  <i class="fa-solid fa-cloud-sun small-icon"></i>
-                </div>
-                <div class="col-2">
-                  <i class="fa-regular fa-sun small-icon"></i>
-                </div>
-                <div class="col-2">
-                  <i class="fa-solid fa-cloud small-icon"></i>
-                </div>
-                <div class="col-2">
-                  <i class="fa-regular fa-sun small-icon"></i>
-                </div>
-              </div>
 
-              <div class="row hi-lo">
-                <div class="col-2">Hi/Lo</div>
-                <div class="col-2">Hi/Lo</div>
-                <div class="col-2">Hi/Lo</div>
-                <div class="col-2">Hi/Lo</div>
-                <div class="col-2">Hi/Lo</div>
-                <div class="col-2">Hi/Lo</div>
+                <div class="col-2">
+                  <div class="day-forecast">
+                    <div class="day">Thur</div>
+                    <i class="fa-solid fa-cloud-sun small-icon"></i>
+                    <div class="hi-lo">Hi/Lo</div>
+                  </div>
+                </div>
+
+                <div class="col-2">
+                  <div class="day-forecast">
+                    <div class="day">Fri</div>
+                    <i class="fa-regular fa-sun small-icon"></i>
+                    <div class="hi-lo">Hi/Lo</div>
+                  </div>
+                </div>
+
+                <div class="col-2">
+                  <div class="day-forecast">
+                    <div class="day">Sat</div>
+                    <i class="fa-solid fa-cloud small-icon"></i>
+                    <div class="hi-lo">Hi/Lo</div>
+                  </div>
+                </div>
+
+                <div class="col-2">
+                  <div class="day-forecast">
+                    <div class="day">Sun</div>
+                    <i class="fa-regular fa-sun small-icon"></i>
+                    <div class="hi-lo">Hi/Lo</div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
