Edited CSS of forecast element

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       src="https://kit.fontawesome.com/160608fb3a.js"
       crossorigin="anonymous"
     ></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -94,7 +95,10 @@
                   <div class="day-forecast">
                     <div class="day">Tues</div>
                     <i class="fa-solid fa-cloud-showers-heavy small-icon"></i>
-                    <div class="hi-lo">Hi/Lo</div>
+                    <div class="hi-lo">
+                      <span class="hi-temp"><strong>Hi°</strong></span>
+                      <span class="lo-temp"></span>Lo°
+                    </div>
                   </div>
                 </div>
 
@@ -102,7 +106,10 @@
                   <div class="day-forecast">
                     <div class="day">Weds</div>
                     <i class="fa-solid fa-cloud small-icon"></i>
-                    <div class="hi-lo">Hi/Lo</div>
+                    <div class="hi-lo">
+                      <span class="hi-temp"><strong>Hi°</strong></span>
+                      <span class="lo-temp"></span>Lo°
+                    </div>
                   </div>
                 </div>
 
@@ -110,7 +117,10 @@
                   <div class="day-forecast">
                     <div class="day">Thur</div>
                     <i class="fa-solid fa-cloud-sun small-icon"></i>
-                    <div class="hi-lo">Hi/Lo</div>
+                    <div class="hi-lo">
+                      <span class="hi-temp"><strong>Hi°</strong></span>
+                      <span class="lo-temp"></span>Lo°
+                    </div>
                   </div>
                 </div>
 
@@ -118,7 +128,10 @@
                   <div class="day-forecast">
                     <div class="day">Fri</div>
                     <i class="fa-regular fa-sun small-icon"></i>
-                    <div class="hi-lo">Hi/Lo</div>
+                    <div class="hi-lo">
+                      <span class="hi-temp"><strong>Hi°</strong></span>
+                      <span class="lo-temp"></span>Lo°
+                    </div>
                   </div>
                 </div>
 
@@ -126,7 +139,10 @@
                   <div class="day-forecast">
                     <div class="day">Sat</div>
                     <i class="fa-solid fa-cloud small-icon"></i>
-                    <div class="hi-lo">Hi/Lo</div>
+                    <div class="hi-lo">
+                      <span class="hi-temp"><strong>Hi°</strong></span>
+                      <span class="lo-temp"></span>Lo°
+                    </div>
                   </div>
                 </div>
 
@@ -134,7 +150,10 @@
                   <div class="day-forecast">
                     <div class="day">Sun</div>
                     <i class="fa-regular fa-sun small-icon"></i>
-                    <div class="hi-lo">Hi/Lo</div>
+                    <div class="hi-lo">
+                      <span class="hi-temp"><strong>Hi°</strong></span>
+                      <span class="lo-temp"></span>Lo°
+                    </div>
                   </div>
                 </div>
               </div>
