--- a/index.html
+++ b/index.html
@@ -89,75 +89,7 @@
               </div>
             </div>
 
-            <div class="weather-forecast">
-              <div class="row mt-3">
-                <div class="col-2">
-                  <div class="day-forecast">
-                    <div class="day">Tues</div>
-                    <i class="fa-solid fa-cloud-showers-heavy small-icon"></i>
-                    <div class="hi-lo">
-                      <span class="hi-temp"><strong>Hi°</strong></span>
-                      <span class="lo-temp"></span>Lo°
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-2">
-                  <div class="day-forecast">
-                    <div class="day">Weds</div>
-                    <i class="fa-solid fa-cloud small-icon"></i>
-                    <div class="hi-lo">
-                      <span class="hi-temp"><strong>Hi°</strong></span>
-                      <span class="lo-temp"></span>Lo°
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-2">
-                  <div class="day-forecast">
-                    <div class="day">Thur</div>
-                    <i class="fa-solid fa-cloud-sun small-icon"></i>
-                    <div class="hi-lo">
-                      <span class="hi-temp"><strong>Hi°</strong></span>
-                      <span class="lo-temp"></span>Lo°
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-2">
-                  <div class="day-forecast">
-                    <div class="day">Fri</div>
-                    <i class="fa-regular fa-sun small-icon"></i>
-                    <div class="hi-lo">
-                      <span class="hi-temp"><strong>Hi°</strong></span>
-                      <span class="lo-temp"></span>Lo°
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-2">
-                  <div class="day-forecast">
-                    <div class="day">Sat</div>
-                    <i class="fa-solid fa-cloud small-icon"></i>
-                    <div class="hi-lo">
-                      <span class="hi-temp"><strong>Hi°</strong></span>
-                      <span class="lo-temp"></span>Lo°
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-2">
-                  <div class="day-forecast">
-                    <div class="day">Sun</div>
-                    <i class="fa-regular fa-sun small-icon"></i>
-                    <div class="hi-lo">
-                      <span class="hi-temp"><strong>Hi°</strong></span>
-                      <span class="lo-temp"></span>Lo°
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="weather-forecast" id="forecast"></div>
           </div>
         </div>
       </div>
