Removed imperial temperature unit change

--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
                     id="main-icon"
                   />
                   <span class="large-temp" id="temperature">-</span>
-                  <span class="deg-far"
-                    ><a href="#" id="cels" class="active">°C</a> |
-                    <a href="#" id="fahr">°F</a></span
-                  >
+                  <span class="deg-far">°C</span>
                 </h2>
               </div>
               <div class="col-4">
